tests/NormalTests/paczka1/fuzzy1/95107809.err
Error in line 1: 2bcpL2n8 A378 87,2
Error in line 6: dnlN A378 -5,3
Error in line 10: Oa59C A110 23,8
Error in line 5: 2bcpL2n8 A110 91,3
Error in line 3: dnlN A378 93,2
Error in line 20: dnlN A110 93,7
